[package]
name = "cataclysm-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
macros = { path ="./macros" }
auth = { path = "./auth" }

cataclysm = "0.2.0-alpha.7"
tokio = "1.39.3"
dotenvy = "0.15.7"
colored = "2.1.0"